# ittoolkit

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  build.bat  next.config.ts  package-lock.json  package.json
docs/: mcp.md  skills.md  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: libggml-base.0.dylib  libggml-blas.dylib  libggml-cpu.0.11.1.dylib  libggml-metal.0.11.1.dylib  libggml-rpc.0.dylib  libggml.0.dylib  libllama.0.0.9114.dylib  libmtmd.0.0.9114.dylib
src-tauri/resources/default-skills/browser-sites/atlassian.net/: SKILL.md
src-tauri/resources/default-skills/disk-cleanup/: SKILL.md
src-tauri/resources/default-skills/log-analyzer/: SKILL.md
src-tauri/resources/default-skills/network-diagnostics/: SKILL.md
src-tauri/resources/default-skills/password-reset/: SKILL.md
src-tauri/resources/default-skills/workflow-creator/: SKILL.md
src-tauri/resources/default-workflows/: jira-create-ticket.workflow.json  m365-reset-password.workflow.json  okta-unlock-user.workflow.json  slack-send-it-alert.workflow.json
src-tauri/sidecar/browser/: README.md  package-lock.json  package.json  tsconfig.json
src-tauri/sidecar/browser/src/: index.ts  sessions.ts  site-profiles.ts  snapshot.ts
src-tauri/sidecar/browser/src/handlers/: act.ts  navigate.ts  observe.ts  open.ts
src-tauri/sidecar/perception/: README.md  pyproject.toml  requirements.txt
src-tauri/sidecar/perception/src/perception/: __init__.py  __main__.py  finder.py  log.py
src-tauri/sidecar/perception/src/perception/handlers/: parse.py
src-tauri/src/: ai_commands.rs  audit_log.rs  browser_classify.rs  browser_commands.rs  commands.rs  computer_classify.rs  computer_commands.rs  conversations.rs  execute_command.rs  lib.rs  main.rs  mcp_client.rs  mcp_server.rs  mcp_types.rs  partition_commands.rs  perception_commands.rs  scanner.rs  skills.rs  system_tools.rs  user_info.rs  user_profile.rs  workflow_db.rs  workflow_recorder.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/ai/providers/: candle.rs  llamacpp.rs  mod.rs  ollama.rs  openai_compatible.rs
src-tauri/src/mcp/: client.rs  native_server.rs
src-tauri/src/partition/: mod.rs  mount.rs  move_partition.rs  move_simple.rs  platform.rs
src-tauri/src/partition/resize/: expand.rs  shrink.rs  validation.rs
(+81 files in other folders)
