[package]
name = "app"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
jwalk = "0.8"
rayon = "1.10.0"
lazy_static = "1.5.0"
walkdir = "2.5.0"
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
chrono = "0.4"
candle-core = { version = "0.8.0", features = [] }
candle-nn = { version = "0.8.0", features = [] }
candle-transformers = { version = "0.8.0", features = [] }
tokenizers = { version = "0.15.2", features = [] }
hf-hub = { version = "0.4.1", features = ["tokio"] }
anyhow = "1.0"
bytes = "1.5"
futures-util = "0.3"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
