[project]
name = "ittoolkit-perception-sidecar"
version = "0.1.0"
description = "Vision-perception sidecar for ittoolkit's computer-use harness — wraps OmniParser v2 (Florence-2 + YOLOv8) behind a JSON-RPC dispatcher."
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    # Minimum viable: JSON-RPC dispatcher only. OmniParser deps are listed
    # below as extras and downloaded on first use to keep the base install
    # small. The agent works without them — UI-TARS handles grounding
    # directly from the raw screenshot when perception returns no
    # candidates.
]

[project.optional-dependencies]
omniparser = [
    "Pillow>=10.0",
    "numpy>=1.26",
    "torch>=2.2",
    "transformers>=4.45",
    "ultralytics>=8.3",
    "huggingface_hub>=0.24",
]

[project.scripts]
ittoolkit-perception = "perception.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
